--- a/Solutions/.editorconfig
+++ b/Solutions/.editorconfig
@@ -78,3 +78,6 @@ dotnet_style_qualification_for_event = true:suggestion
 
 # Style - using
 csharp_using_directive_placement = inside_namespace:warning
+
+# StyleCop currently chokes on various uses of record
+dotnet_diagnostic.SA1201.severity = None
