--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -20,14 +20,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\JsonModel\Arrays\JsonProperties.feature.cs" />
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\JsonModel\Equals\JsonAnyEquals - Copy.feature.cs" />
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\JsonModel\Equals\JsonArrayEquals - Copy.feature.cs" />
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\JsonModel\JsonSerialization - Copy.feature.cs" />
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\JsonModel\Properties\JsonSerialization.feature.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="SolidToken.SpecFlow.DependencyInjection" Version="3.9.2" />
@@ -56,58 +48,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Features\JsonModel\Arrays\JsonArrays.feature.cs">
-      <DependentUpon>JsonArrays.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Features\JsonModel\Equals\JsonNotAnyEquals.feature.cs">
-      <DependentUpon>JsonNotAnyEquals.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Features\JsonModel\Equals\JsonAnyEquals.feature.cs">
-      <DependentUpon>JsonAnyEquals.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Features\JsonModel\ValidationContext.feature.cs">
-      <DependentUpon>ValidationContext.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Features\JsonModel\Properties\JsonProperties.feature.cs">
-      <DependentUpon>JsonProperties.feature</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="appsettings.local.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="appsettings.local.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="appsettings.template.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="appsettings.local.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
   <ItemGroup>
-    <SpecFlowFeatureFiles Update="Features\JsonModel\Arrays\JsonArrays.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\JsonModel\Equals\JsonNotAnyEquals.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\JsonModel\Equals\JsonAnyEquals.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\JsonModel\ValidationContext.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\JsonModel\Properties\JsonProperties.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
+    <PackageReference Update="StyleCop.Analyzers" Version="1.2.0-beta.435" />
   </ItemGroup>
+
 </Project>
