Initial steps to enable CI builds
* add submodule for JSON Schema test suite
* modified default test settings to use schema files from submodule
* added pipelines and scripted build
* removed local settings files from repo
* disabled automatic building of benchmark code on each test execution

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,7 @@ coverage.cobertura.xml
 # NCrunch files
 *.ncrunchsolution
 *.ncrunchproject
+
+# Scripted build artifacts
+/_codeCoverage
+/_packages
