--- a/Solutions/Corvus.JsonSchema.Benchmarking/Corvus.JsonSchema.Benchmarking.csproj
+++ b/Solutions/Corvus.JsonSchema.Benchmarking/Corvus.JsonSchema.Benchmarking.csproj
@@ -35,6 +35,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.local.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
