--- a/Solutions/Corvus.Json.Specs/appsettings.template.json
+++ b/Solutions/Corvus.Json.Specs/appsettings.template.json
@@ -1,13 +1,17 @@
 {
+  // Normally you should not need an appsettings.local.json, because the appsettings.json sets each of these
+  // paths to use the copy of JSON-Schema-Test-Suite that is included as a submodule of this repository.
+  // You would only need to change these if you are using a locally-modified copy of the test suite during
+  // development.
   "jsonSchemaBuilderDriverSettings": {
-    "remotesBaseDirectory": "{Local Path To The Json Schema Test Suite}\\JSON-Schema-Test-Suite\\remotes\\"
+    "remotesBaseDirectory": "{Local Path To The Json Schema Test Suite}/JSON-Schema-Test-Suite/remotes/"
   },
   "jsonSchemaBuilder201909DriverSettings": {
-    "testBaseDirectory": "{Local Path To The Json Schema Test Suite}\\JSON-Schema-Test-Suite\\tests\\draft2019-09",
-    "benchmarkOutputPath": "{Local Path To Benchmark outputs}\\output\\201909"
+    "testBaseDirectory": "{Local Path To The Json Schema Test Suite}/JSON-Schema-Test-Suite/tests/draft2019-09",
+    "benchmarkOutputPath": "{Local Path To Benchmark outputs}/output/201909"
   },
   "jsonSchemaBuilder202012DriverSettings": {
-    "testBaseDirectory": "{Local Path To The Json Schema Test Suite}\\JSON-Schema-Test-Suite\\tests\\draft2020-12",
-    "benchmarkOutputPath": "{Local Path To Benchmark outputs}\\output\\202012"
+    "testBaseDirectory": "{Local Path To The Json Schema Test Suite}/JSON-Schema-Test-Suite/tests/draft2020-12",
+    "benchmarkOutputPath": "{Local Path To Benchmark outputs}/output/202012"
   }
 }
