--- a/Solutions/Corvus.JsonSchema.Benchmarking/Corvus.JsonSchema.Benchmarking.csproj
+++ b/Solutions/Corvus.JsonSchema.Benchmarking/Corvus.JsonSchema.Benchmarking.csproj
@@ -6,10 +6,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-	</PropertyGroup>
-
-	<PropertyGroup>
-		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <IsPackable>false</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
