--- a/Solutions/Corvus.Json.Specs/appsettings.json
+++ b/Solutions/Corvus.Json.Specs/appsettings.json
@@ -1,13 +1,11 @@
 {
   "jsonSchemaBuilderDriverSettings": {
-    "remotesBaseDirectory": "C:\\Users\\matth\\source\\repos\\JSON-Schema-Test-Suite\\remotes"
+    "remotesBaseDirectory": "../../../../../JSON-Schema-Test-Suite/remotes"
   },
   "jsonSchemaBuilder201909DriverSettings": {
-    "testBaseDirectory": "C:\\Users\\matth\\source\\repos\\JSON-Schema-Test-Suite\\tests\\draft2019-09",
-    "benchmarkOutputPath": "C:\\Users\\matth\\OneDrive\\Desktop\\output\\201909"
+    "testBaseDirectory": "../../../../../JSON-Schema-Test-Suite/tests/draft2019-09",
   },
   "jsonSchemaBuilder202012DriverSettings": {
-    "testBaseDirectory": "C:\\Users\\matth\\source\\repos\\JSON-Schema-Test-Suite\\tests\\draft2020-12",
-    "benchmarkOutputPath": "C:\\Users\\matth\\OneDrive\\Desktop\\output\\202012"
+    "testBaseDirectory": "../../../../../JSON-Schema-Test-Suite/tests/draft2020-12",
   }
 }
