--- a/Solutions/Corvus.Json.Specs/appsettings.json
+++ b/Solutions/Corvus.Json.Specs/appsettings.json
@@ -1,11 +1,11 @@
 {
   "jsonSchemaBuilderDriverSettings": {
-    "remotesBaseDirectory": "C:/Users/matth/source/repos/JSON-Schema-Test-Suite/remotes"
+    "remotesBaseDirectory": "../../../../../JSON-Schema-Test-Suite/remotes"
   },
   "jsonSchemaBuilder201909DriverSettings": {
-    "testBaseDirectory": "C:/Users/matth/source/repos/JSON-Schema-Test-Suite/tests/draft2019-09"
+    "testBaseDirectory": "../../../../../JSON-Schema-Test-Suite/tests/draft2019-09"
   },
   "jsonSchemaBuilder202012DriverSettings": {
-    "testBaseDirectory": "C:/Users/matth/source/repos/JSON-Schema-Test-Suite/tests/draft2020-12"
+    "testBaseDirectory": "../../../../../JSON-Schema-Test-Suite/tests/draft2020-12"
   }
 }
