--- a/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.201909.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.201909.csproj
@@ -1,10 +1,50 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Corvus.Json.CodeGeneration._201909</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
+	<PropertyGroup>
+		<NoWarn>CS1591</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<LangVersion>preview</LangVersion>
+		<EnablePreviewFeatures>true</EnablePreviewFeatures>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+		<Description>A library for generating code from .NET types representing data types found in JSON.</Description>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Corvus.Extensions" Version="1.1.4" />
+		<PackageReference Include="Corvus.Json.JsonSchema" Version="0.1.12" />
+		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="System.CodeDom" Version="6.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Corvus.Json.CodeGeneration.Abstractions\Corvus.Json.CodeGeneration.Abstractions.csproj" />
+		<ProjectReference Include="..\Corvus.Json.Walker\Corvus.Json.Walker.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Update="StyleCop.Analyzers" Version="1.2.0-beta.435" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Update="Roslynator.Analyzers" Version="4.1.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Corvus.Json.CodeGeneration.Draft201909\Generators\" />
+	</ItemGroup>
 </Project>
