--- a/Solutions/Corvus.JsonSchema.SpecGenerator/JsonSchemaOrgTestSuiteSelector.jsonc
+++ b/Solutions/Corvus.JsonSchema.SpecGenerator/JsonSchemaOrgTestSuiteSelector.jsonc
@@ -22,7 +22,32 @@
             "format": {
               "excludeFromThisDirectory": [
                 "unknown\\.json"
-              ]
+              ],
+              "testExclusions": {
+                "optional/format/date-time.json": {
+                  "validation of date-time strings": {
+                    "testsToIgnoreIndices": [ 10, 11 ]
+                  }
+                },
+                // Probably want to fix this one for real.
+                //"optional/format/duration.json": {
+                //  "testsToIgnoreIndices": [ 23 ]
+                //}
+                "optional/format/time.json": {
+                  "validation of time strings": {
+                    "testsToIgnoreIndices": [
+                      // Leap seconds
+                      7,
+                      10,
+                      13,
+                      14,
+                      17,
+                      18
+                    ]
+                  }
+                }
+              }
+
             }
           }
         }
