--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
@@ -18,6 +18,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.HighPerformance" Version="8.0.0" />
 		<PackageReference Include="Corvus.Extensions" Version="1.1.4" />
 		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.1">
 			<PrivateAssets>all</PrivateAssets>
