--- a/Solutions/Corvus.Json.Benchmarking/Corvus.Json.Benchmarking.csproj
+++ b/Solutions/Corvus.Json.Benchmarking/Corvus.Json.Benchmarking.csproj
@@ -25,8 +25,18 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="JsonSchema.Net" Version="3.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 		<PackageReference Include="JsonPatch.Net" Version="2.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="PersonModel\person-array-schema.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="PersonModel\person-schema.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 	<PropertyGroup>
