--- a/Solutions/Corvus.Json.Benchmarking/Corvus.Json.Benchmarking.csproj
+++ b/Solutions/Corvus.Json.Benchmarking/Corvus.Json.Benchmarking.csproj
@@ -19,15 +19,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BenchmarkDotNet" Version="0.13.1.1821" />
-		<PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.1.1821" />
-		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.1">
+		<PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
+		<PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.2" />
+		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="JsonSchema.Net" Version="3.2.0" />
+		<PackageReference Include="JsonSchema.Net" Version="3.2.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-		<PackageReference Include="JsonPatch.Net" Version="2.0.2" />
+		<PackageReference Include="JsonPatch.Net" Version="2.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -43,5 +43,9 @@
 		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
 		<RestoreLockedMode Condition="$(ContinuousIntegrationBuild) == 'true'">true</RestoreLockedMode>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Roslynator.Analyzers" Version="4.1.1" />
+	</ItemGroup>
 
 </Project>
