--- a/Solutions/Corvus.Json.CodeGeneration.7/Corvus.Json.CodeGeneration.7.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.7/Corvus.Json.CodeGeneration.7.csproj
@@ -27,7 +27,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="System.CodeDom" Version="6.0.0" />
+		<PackageReference Include="System.CodeDom" Version="7.0.0-preview.7.22375.6" />
 	</ItemGroup>
 
 	<ItemGroup>
