--- a/Solutions/Corvus.Json.JsonSchema/Corvus.Json.JsonSchema.csproj
+++ b/Solutions/Corvus.Json.JsonSchema/Corvus.Json.JsonSchema.csproj
@@ -23,12 +23,12 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.8" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.0-preview.7.22376.6" />
 		<PackageReference Include="NodaTime" Version="3.1.2" />
 		<PackageReference Include="System.Buffers" Version="4.5.1" />
-		<PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
-		<PackageReference Include="System.Text.Json" Version="6.0.5" />
+		<PackageReference Include="System.Collections.Immutable" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="System.Text.Json" Version="7.0.0-preview.7.22375.6" />
 	</ItemGroup>
 
 	<ItemGroup>
