--- a/Solutions/Corvus.JsonPatch.Benchmarking/Corvus.JsonPatch.Benchmarking.csproj
+++ b/Solutions/Corvus.JsonPatch.Benchmarking/Corvus.JsonPatch.Benchmarking.csproj
@@ -25,7 +25,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0-preview.7.22375.6" />
 		<PackageReference Include="JsonPatch.Net" Version="2.0.4" />
 	</ItemGroup>
 
