--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
@@ -12,8 +12,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<LangVersion>preview</LangVersion>
-		<EnablePreviewFeatures>true</EnablePreviewFeatures>
+		<LangVersion>11</LangVersion>
 	</PropertyGroup>
 
 	<PropertyGroup>
