--- a/Solutions/Corvus.Json.CodeGenerator/Corvus.Json.CodeGenerator.csproj
+++ b/Solutions/Corvus.Json.CodeGenerator/Corvus.Json.CodeGenerator.csproj
@@ -27,8 +27,7 @@
 	</ItemGroup>
 
 	<PropertyGroup>
-		<LangVersion>preview</LangVersion>
-		<EnablePreviewFeatures>true</EnablePreviewFeatures>
+		<LangVersion>11</LangVersion>
 	</PropertyGroup>
 
 </Project>
