--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "JSON-Schema-Test-Suite"]
 	path = JSON-Schema-Test-Suite
 	url = https://github.com/json-schema-org/JSON-Schema-Test-Suite.git
+[submodule "uritemplate-test"]
+	path = uritemplate-test
+	url = https://github.com/uri-templates/uritemplate-test.git
