Swap to RTM build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,5 @@ jobs:
     solution_to_build: $(Endjin_Solution_To_Build)
     additionalNetSdkVersions:
     - '7.x'
-    includeNetSdkPreviewVersions: 'true'
+    includeNetSdkPreviewVersions: 'false'
     analysisOutputSasToken: $(Endjin_AnalysisOutput_SASToken)
